Fix transparent search input
Gulp update messed up the transparent semantic UI search boxes for the nav and the doc menu. Added a CSS override

--- a/assets/css/modules/algolia-searches.scss
+++ b/assets/css/modules/algolia-searches.scss
@@ -22,6 +22,23 @@
 
 .aa-input-search {
   min-width: 270px !important;
+  padding: 12px 28px 12px 12px !important;
+  border: 0px solid white !important;
+  font-family: "Source Code Pro", monospace;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.aa-search-input-docs {
+  padding: 12px 28px 12px 12px !important;
+  border: 0px solid white !important;
+  font-family: "Source Code Pro", monospace;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .ais-pagination {
